<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eBay_Item_Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ebay_search">eBay Search</string>
    <string name="keyword">Keyword</string>
    <string name="price_from">Price From</string>
    <string name="price_to">Price To</string>
    <string name="sort_by">Sort By</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
	 <string-array name="sort_by_values">
        <item>Best Match</item>
        <item>Price: highest first</item>
        <item>Price + Shipping: highest first</item>
        <item>Price + Shipping: lowest first</item>
    </string-array>
	 <string name="price_negative_error">Price cannot be less than 0.</string>
	 <string name="keyword_error">Please enter a keyword</string>
	 <string name="price_max_less_min">Price To cannot be less than Price From</string>
	 <string name="app_id">345006819041207</string>
	 <string name="condition">Condition</string>
	 <string name="category_name">Category Name</string>
	 <string name="buying_format">Buying Format</string>
	 <string name="user_name">User Name</string>
	 <string name="feedback_score">Feedback Score</string>
	 <string name="positive_feedback">Positive Feedback</string>
	 <string name="feedback_rating">Feedback Rating</string>
	 <string name="top_rated">Top Rated</string>
	 <string name="store">Store</string>
	 <string name="shipping_type">Shipping Type</string>
	 <string name="handling_time">Handling Time</string>
	 <string name="shipping_locations">Shipping Locations</string>
	 <string name="expedited_shipping">Expedited Shipping</string>
	 <string name="one_day_shipping">One Day Shipping</string>
	 <string name="returns_accepted">Returns Accepted</string>
	 <string name="no_result_found">No Results Found</string>
	 <string name="basic_info">Basic Info</string>
	 <string name="seller_info">Seller Info</string>
	 <string name="shipping_info">Shipping Info</string>
</resources>
