<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_main">

    <TextView
        android:id="@+id/ebayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/ebay_search"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/ebayTitle"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="79dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/keywordView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyword"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editKeywordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
                
                <requestFocus />
                </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/priceFromView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_from"
                
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editPriceFromText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" >

            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/priceToView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_to"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editPriceToText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sortByView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_toEndOf="@+id/clearButton"
        android:layout_toRightOf="@+id/clearButton"
        android:text="@string/search" />

    <Button
        android:id="@+id/clearButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/searchButton"
        android:layout_alignBottom="@+id/searchButton"
        android:layout_alignLeft="@+id/ebayTitle"
        android:layout_alignStart="@+id/ebayTitle"
        android:text="@string/clear" />

    <TextView
        android:id="@+id/keyword_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clearButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/keyword_error" />

    <TextView
        android:id="@+id/price_negative_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keyword_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/price_negative_error" />

    <TextView
        android:id="@+id/price_min_max_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_negative_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/price_max_less_min" />
    
    <TextView
        android:id="@+id/no_results_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_min_max_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/no_result_found" />
    

</RelativeLayout>