<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#eaecee">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/userNameRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/userNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/feedbackRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:paddingTop="20dp" >

            <TextView
                android:id="@+id/feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_score"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/feedbackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/positiveFeedbackRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:paddingTop="20dp" >

            <TextView
                android:id="@+id/positiveFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/positive_feedback"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/positiveFeedbackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>
        
            <TableRow
            android:id="@+id/feedbackRatingRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:paddingTop="20dp" >

            <TextView
                android:id="@+id/feedbackRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_rating"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/feedbackRatingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

            <RelativeLayout >
            <TextView
                android:id="@+id/toprated"
                 android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/topratedText"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/toprated"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:paddingTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

			</RelativeLayout>
      

            <TableRow
            android:id="@+id/storeRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:paddingTop="20dp" >

            <TextView
                android:id="@+id/store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/storeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>
    </TableLayout>

</LinearLayout>